# crafting_interpreters

./: Cargo.toml  README.md  test.lox  test.py
docs/: design_of_interpreter.md  grammar.md  thoughts.md  todo.md  tutorial.md
docs/lox/: grammar.md
example/: get_primes.lox  lone_id.lox  tmp.lox  while.lox
src/: AST_Node.rs  err_lox.rs  interpreter.rs  lib.rs  main.rs  parser.rs  runtime.rs  scanner.rs  test.rs  token.rs  tree.rs
src/interpreter/: AST_Node.rs  parse_tree_unfinished.rs  parser.rs  scanner.rs  token.rs
src/runtime/: lox_std.rs  lox_variable.rs  stack.rs  variable.rs
src/runtime/lox_std/: conversion.rs  io.rs  math.rs
src/test/: parser.rs  scanner.rs
test/: assignment.lox  bracket.lox  finished.lox  grand_final1.lox  greater_less.lox  if.lox  negative.lox  new_stmt.lox  plus_minus.lox  print.lox  print1+1.lox  while.lox
test/parser/: assignment.lox  braced.lox  comma.lox  elseif.lox  elseif_err.lox  function.lox  if.lox  negative.lox  plus_minus.lox  plus_minus_equal.lox  quote.lox  var.lox  while.lox
test/scanner/: slash.lox  star.lox
