[package]
name = "lox-rust"
version = "0.1.0"
edition = "2021"


[dependencies]
lazy_static = "1.4.0"
rand = "0.8.5"
colored = "2.1.0"
clap = { version = "4.5.9", features = ["derive"] }
colog = "1.3.0"
log = "0.4.22"

# The development profile, used for `cargo build`
[profile.dev]
opt-level = 0  # Controls the --opt-level the compiler builds with
debug = true   # Controls whether the compiler passes `-g`

# The release profile, used for `cargo build --release`
[profile.release]
opt-level = 3
debug = false
